--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -2,5 +2,13 @@
 
 ### #01 『ただいま』も『おかえり』もない場所
 
+在手机设定的闹钟铃声中醒来后，我第一眼看到的——是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
+
+挂衣杆上吊着各类女装，小型收纳箱里则是女式内衣和生理用品。
+
+拿起手机确认时间后，我抬起上半身，维持着坐在地上的样子，从身后仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。
+
+&emsp;
+
 某处公寓楼的802室，2LDK户型的更衣间——这便是我十多年前随**那两个人**回国后的容身之处。
 
