--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -6,7 +6,7 @@
 
 挂衣杆上吊着各类女装，小型收纳箱里则是女式内衣和生理用品。
 
-拿起手机确认时间后，我抬起上半身，维持着坐在地上的样子，从身后仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。
+我把吵个不停的手机按掉，抬起上半身，维持着坐在地上的姿势转向身后，从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。
 
 &emsp;
 
