--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -12,3 +12,13 @@
 
 某处公寓楼的802室，2LDK户型的更衣间——这便是我十多年前随**那两个人**回国后的容身之处。
 
+更衣间里本就没多少的个人用品，如今只剩下了放在最里面的那个塑料箱。其余的物品，已经先行送到了学校后面的旧宿舍中。
+
+换好制服的我打开更衣室的门，提着书包穿过主卧室，走向卫生间完成上学前的洗漱工作。
+
+这间主卧室原本只有**那个女人**独自居住，但自从两星期前开始，Queen Size的床上就多了一个十二岁的少女。
+
+对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在入学考试后那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
+
+
+
