--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -18,6 +18,8 @@
 
 这间主卧室原本只有**那个女人**独自居住，但自从两星期前开始，Queen Size的床上就多了一个十二岁的少女。
 
+名为唯的少女的外祖母在那个女人十岁失去父母时收养了她。唯小学毕业的时候，她的母亲希望那个女人能给予生活和学习上的照料，于是唯就住到了这个家里。
+
 对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在入学考试后那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
 
 
