--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -2,6 +2,8 @@
 
 ### #01 『ただいま』も『おかえり』もない場所
 
+天道大学附属学校高等部入学式当天。
+
 在手机设定的闹钟铃声中醒来后，我第一眼看到的——是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
 
 挂衣杆上吊着各类女装，小型收纳箱里则是女式内衣和生理用品。
@@ -20,9 +22,9 @@
 
 名为唯的少女的外祖母在那个女人十岁失去父母时收养了她。因此对那个女人而言，唯的外祖母一家，算是自己在这个世界仅有的亲人。
 
-唯小学毕业的时候，她的母亲希望那个女人能给予生活和学习上的照料，于是唯就住到了这个家里。
+唯小学毕业前来中等部就读的时候，她的母亲希望那个女人能给予生活和学习上的照料，于是唯就住到了这个家里。
 
-对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在入学考试后那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
+对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在高等部入学考试后，那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
 
 
 
