--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -26,5 +26,5 @@
 
 对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在高等部入学考试后，那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
 
-学园长表示可以让我入住学校后的旧宿舍时，那个女人的脸上闪过了一丝不知是惊讶还是心虚的神色，但她的这一反应，只持续到了学园长补充特待生可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
+学园长表示可以让我入住学校后的旧宿舍时，那个女人的脸上闪过了一丝不知是惊讶还是心虚的神色。但她的这一反应，只持续到了学园长补充特待生可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
 
