--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -2,29 +2,44 @@
 
 ### #01 Hejmo de Silento
 
-天道大学附属学校高等部入学式当天。
+~~天道大学附属学校高等部入学式当天。~~
 
-在手机设定的闹钟铃声中醒来后，我第一眼看到的——是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
+清晨5点30分。
+
+被闹钟铃声叫醒后，最先映入眼帘的，是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
 
 挂衣杆上吊着各类女装，小型收纳箱里则是女式内衣和生理用品。
 
-我把吵个不停的手机按掉，抬起上半身，维持着坐在地上的姿势转向身后，从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。
+今天是开学的第一天——意识到这一点的我，按掉吵个不停的手机，揉着眼睛从地上站起。
 
 &emsp;
 
 某处公寓楼的802室，2LDK户型的更衣间——这便是我十多年前随**那两个人**回国后的容身之处。
 
+我以尽可能不发出声音的方式拧动门把手，蹑手蹑脚地穿过主卧室，走向卫生间开始洗漱。
+
+这间主卧室之前只有**那个女人**独自居住，但自两星期前起，Queen Size的床上就多了一个十二岁的少女。
+
+这个名为唯的少女姑且算是我的亲戚——她的外祖母收养了十岁时因空难而失去双亲的那个女人。
+
+在唯小学毕业的时候，她的母亲和外祖父母认为那个女人能够提供更加良好的生活和学习环境，因此向她询问是否可以让唯和她一起生活。
+
+面对自己仅有的亲人们的请求，那个女人自然欣然同意。就这样，少女在入住这间公寓后，和那个女人睡在了一张床上。
+
+虽然我自从记事开始到十岁左右之前也是这样的情况——近几年则是睡在与主卧室相连的更衣间的地上——但考虑到小孩子那逐渐复杂起来的想法，我在那个女人于高中入学考试后带我去见学园长的时候，很知趣地提出了住进学校宿舍的请求。
+
+听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一反应，只持续到了学园长指出身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
+
+
+
+***
+
+
+从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。~~
+
+
+
 更衣间里本就没多少的个人用品，如今只剩下了放在最里面的那个塑料箱。其余的物品，已经先行送到了学校后面的旧宿舍中。
 
 换好制服的我打开更衣室的门，提着书包穿过主卧室，走向卫生间完成上学前的洗漱工作。
-
-这间主卧室原本只有**那个女人**独自居住，但自从两星期前开始，Queen Size的床上就多了一个十二岁的少女。
-
-名为唯的少女的外祖母在那个女人十岁失去父母时收养了她。因此对那个女人而言，唯的外祖母一家，算是自己在这个世界仅有的亲人。
-
-唯小学毕业前来中等部就读的时候，她的母亲希望那个女人能给予生活和学习上的照料，于是唯就住到了这个家里。
-
-对那个女人来说，这倒不算什么事。但考虑到小孩子的想法，在高等部入学考试后，那个女人带我去见学园长——她在这所学校就读时的班主任——的时候，我还是知趣地提出了住校的请求。
-
-学园长表示可以让我入住学校后的旧宿舍时，那个女人的脸上闪过了一丝不知是惊讶还是心虚的神色。但她的这一反应，只持续到了学园长补充特待生可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
 
