--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -1,8 +1,6 @@
-## 一章 闇の中のデイヴィッドとそのアグニス
+## 一章 市長と捜査官と緑の帽子を被る男
 
-### #01 Hejmo de Silento
-
-~~天道大学附属学校高等部入学式当天。~~
+### #01 Hejmo de Silento: «Bagne de Toulon»
 
 清晨5点30分。
 
@@ -35,7 +33,7 @@
 ***
 
 
-从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。~~
+~~从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。~~
 
 
 
