--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -16,19 +16,19 @@
 
 我以尽可能不发出声音的方式拧动门把手，蹑手蹑脚地穿过主卧室，走向卫生间开始洗漱。
 
-这间主卧室之前只有**那个女人**独自居住，但自两星期前起，Queen Size的床上就多了一个十二岁的少女。
+这间主卧室之前只有**那个女人**独自居住，但自两星期前起，这里就多了一个十二岁的少女。
 
 这个名为唯的少女姑且算是我的亲戚——她的外祖母收养了十岁时因空难而失去双亲的那个女人。
 
 在唯小学毕业的时候，她的母亲和外祖父母认为那个女人能够提供更加良好的生活和学习环境，因此向她询问是否可以让唯和她一起生活。
 
-面对自己仅有的亲人们的请求，那个女人自然欣然同意。就这样，少女在入住这间公寓后，和那个女人睡在了一张床上。
+面对自己仅有的亲人们的请求，那个女人自然欣然同意。就这样，少女在入住这间公寓后，和那个女人睡在了同一张Queen Size的床上。
 
 虽然我自从记事开始到十岁左右之前也是这样的情况——近几年则是睡在与主卧室相连的更衣间的地上——但考虑到小孩子那逐渐复杂起来的想法，我在那个女人于高中入学考试后带我去见学园长的时候，很知趣地提出了住进学校宿舍的请求。
 
 听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一反应，只持续到了学园长指出身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
 
-
+这个家中
 
 ***
 
