--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -2,6 +2,8 @@
 
 ### #01 Hejmo de Silento: «Bagne de Toulon»
 
+&emsp;
+
 清晨5点30分。
 
 被闹钟铃声叫醒后，最先映入眼帘的，是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
@@ -26,18 +28,62 @@
 
 虽然我自从记事开始到十岁左右之前也是这样的情况——近几年则是睡在与主卧室相连的更衣间的地上——但考虑到小孩子那逐渐复杂起来的想法，我在那个女人于高中入学考试后带我去见学园长的时候，很知趣地提出了住进学校宿舍的请求。
 
-听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一反应，只持续到了学园长指出身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
+听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一表情只持续到了学园长表示身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
 
-这个家中
+一来一去之后，住在这间公寓里的人仍然是三个。
+
+&emsp;
+
+走出卫生间的我，看了一眼次卧室的门——不出意料，门仍然紧锁着。
+
+**那个男人**和**那个女人**一直过着宛如平行线般互不干涉的生活。不仅不在同一个卧室中睡觉，甚至也不在同一张桌子上就餐——更准确的说，我压根就没见过那两个人开火做饭的样子。
+
+那两个人之间每年的对话，大概不需要用两只手就能数完。而且他们也没有什么在外面装模作样的想法，更没有为我留下过任何一张常人庆祝节日时会拍下的家庭合影。
+
+在这样的环境浸染下，我从一开始就没想过那两个人重归于好的可能性，而是就这样理所当然地维持着宛如窒息的沉默气氛。
+
+我读小学的时候，有一次那个女人带我去拜访她的好友。这位阿姨看到我的时候问了我一个问题——
+
+“你会想要一个弟弟或者妹妹吗？”
+
+我没有回答，只是摇了摇头。
+
+我已经记不得自己那时摇头的原因，但事到如今，我也不觉得自己的这个决定有什么错。
+
+在我的记忆中，他们曾发生过一次激烈的争吵。内容我早已没了印象，但那两个人看向彼此的目光，在幼小的我眼里，绝非看向**家人**的眼神，甚至不是看向**陌生人**的眼神。
+
+那是看向**仇人**的眼神。
+
+这里是名为**家庭**的监狱，每一个人都戴着名为**家庭关系**的绿色帽子（终身苦役）。
+
+而我犯下的罪行，大概正是我的**出生**本身。
+
+在我的生命终结之前，我注定只能在这顶绿色帽子（终身苦役）的重压下生活。
+
+至于终结我的生命的，是病痛，是意外，还是我自身——时至今日，我仍然无法确定。
+
+正因如此，我不想再让一个无辜的生命犯下同样的罪行（出生在这个家庭）。
 
 ***
 
+回到主卧室的时候，**那个女人**刚刚醒来。
 
-~~从仅有的一个收纳个人衣物的塑料箱中，取出放在最上面的制服。~~
+“要去学校了吗？”
 
+“嗯。唯（唯さん）还在睡？”
 
+“过会我就叫她起来。就算入学式下午才开，也不能让她睡到中午。对了，你有没有落下什么东西？”
 
-更衣间里本就没多少的个人用品，如今只剩下了放在最里面的那个塑料箱。其余的物品，已经先行送到了学校后面的旧宿舍中。
+“应该没有，我的行李昨天都送到宿舍了。”
 
-换好制服的我打开更衣室的门，提着书包穿过主卧室，走向卫生间完成上学前的洗漱工作。
+所谓的行李，其实也只要一个26英寸的行李箱就够。
 
+“那就好。要我送你去学校吗？”
+
+“不必了。您上午还有研究室那边的工作吧？”
+
+“倒也没那么多工作，不过既然你这么说那就自己去吧，我下午再送唯去学校。”
+
+“明白了。”
+
+短暂的表面功夫（互相试探）结束后，我走进更衣室换好制服，提着书包出来——此时我想起自己应该把**那本小说**带到宿舍去读，于是从客厅的书架上抽下5册文库本塞进书包，这才离开公寓，将门关好，向前方的电梯走去。
