--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -10,7 +10,7 @@
 
 挂衣杆上吊着各类女装，小型收纳箱里则是女式内衣和生理用品。
 
-今天是开学的第一天——意识到这一点的我，按掉吵个不停的手机，揉着眼睛从地上站起。
+今天是开学的第一天——意识到这一点的我，在司空见惯的风景中，按掉吵个不停的手机，揉着眼睛从地上站起。
 
 ***
 
