--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -72,7 +72,7 @@
 
 “嗯。唯（唯さん）还在睡？”
 
-“过会我就叫她起来。就算入学式下午才开，也不能让她睡到中午。对了，你有没有落下什么东西？”
+“过会我就叫她起来。就算中等部的入学式下午才开，也不能让她睡到中午。对了，你有没有落下什么东西？”
 
 “应该没有，我的行李昨天都送到宿舍了。”
 
