--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -26,9 +26,9 @@
 
 面对自己仅有的亲人们的请求，那个女人自然欣然同意。就这样，少女在入住这间公寓后，和那个女人睡在了同一张Queen Size的床上。
 
-虽然我自从记事开始到十岁左右之前也是这样的情况——近几年则是睡在与主卧室相连的更衣间的地上——但考虑到小孩子那逐渐复杂起来的想法，我在那个女人于高中入学考试后带我去见学园长的时候，很知趣地提出了住进学校宿舍的请求。
+虽然我自从记事开始到十岁左右之前也是这样的情况——近几年则是睡在与主卧室相连的更衣间的地上——但考虑到小孩子那逐渐复杂起来的想法，我在那个女人于高等部编入后带我去见校长的时候，很知趣地提出了住进学校宿舍的请求。
 
-听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一表情只持续到了学园长表示身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
+听到可以入住学校后面的旧宿舍时，那个女人的脸上闪过了一丝微妙的神色。但她的这一表情只持续到了校长表示身为特待生的我可以免除住宿费用这一条件为止，之后便恢复了一如既往的营业式微笑。
 
 一来一去之后，住在这间公寓里的人仍然是三个。
 
@@ -54,11 +54,11 @@
 
 那是看向**仇人**的眼神。
 
-这里是名为**家庭**的监狱，每一个人都戴着名为**家庭关系**的绿色帽子（终身苦役）。
+这里是名为**家庭**的监狱，每一个人都背负名为**家庭关系**的终身苦役。
 
 而我犯下的罪行，大概正是我的**出生**本身。
 
-在我的生命终结之前，我注定只能在这顶绿色帽子（终身苦役）的重压下生活。
+在我的生命终结之前，我注定只能在这种家庭关系（终身苦役）的重压下生活。
 
 至于终结我的生命的，是病痛，是意外，还是我自身——时至今日，我仍然无法确定。
 
