--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -1,8 +1,77 @@
-### #02 Klaso 1-A
+### #02 Oficejo de Rektoro kaj Klaso 1-A
+
+《Universität Tendou angeschlossene Schule》。
+
+——教学楼主入口的正上方，写着一串看上去像是德语的文字。
+
+搭乘电车在学校前的车站下车后，通过自动扶梯进入天桥，再刷学生卡通过闸机，又从天桥一端走到另一端的我，如今就站在这串文字的前面。
+
+从口袋中取出手机的我点了一下屏幕，上面显示的时间是6点15分。
+
+那个女人在前一晚叫我在早上6点30分去校长办公室。虽然我在之前已经被带去过一次，但具体的位置我记得并不清楚，因此那个女人又在Linie上向我发送了办公室的门牌号。只写了门牌号而没写具体路线，大概是她觉得我能按图索骥找到正确的位置吧。
+
+我穿过玻璃门开着的主入口，走入大厅前的通道，看向墙上的指示牌，确认路线之后，便走向一边的电梯门，按下通向楼上的按钮。
 
 &emsp;
 
-从公寓走到距离最近的电车站，坐了不到十五分钟的电车后，我抬头看向头顶的指示牌。
+“这是家母托我送来的的一点礼物，还请校长您能收下。”
 
-Universität angeschlossene Mittelschule。
+“你这么说可就见外了，政树。这所学校能够有如此积极向上的氛围，你母亲在其中也起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。”
 
+面前这位语调和蔼，头发花白的女性，便是这所学校的校长入江范子——在那个女人就读这所学校的三年中，入江校长一直是她的班主任。拜这一关系所赐，我曾随那个女人数次到校长的府上拜访。
+
+“哪里哪里，家母曾对我说，多亏了您当年的教导，才有了现在的她。这份礼物也是她的一点敬意。”
+
+“政树你的这个作风，倒是和你母亲很像呢。对了，教导主任昨天到我这里送了一份高等部的分班表，你要不要看一下？”
+
+“那就恭敬不如从命了。”
+
+我接过入江校长递过来的分班表，没过一分钟就在上面找到了自己的名字。
+
+雨宫政树（Amamiya Masaki）。一年A班。出席号码——不出意外的是1号。
+
+“非常感谢。入江校长，我听家母说学校里似乎有一个放了一架钢琴的教室……”
+
+“说的是**那间房间**对吧，你母亲的记忆力可真好。虽然有人定期维护，不过这二十多年来，还从没有学生进去过。”
+
+入江校长露出了若有所思的表情，随后继续说道：
+
+“你是打算借那个房间练习钢琴吗？”
+
+“是的。虽然并没有将其作为职业的打算，但家母还是觉得我丢下这门技术不是太好。”
+
+——另一个不想说出口的理由是，这也算我转移自身注意力（逃离这个世界）的一个手段。
+
+校长办公室内陷入了短暂的沉默。大概入江校长也在烦恼着，是否要为我这个平凡无奇的学生而专门破例。她转过身去，看向窗外的天空。
+
+过了大约五分钟，她才将视线从密布的云层收回，从口袋中取出钥匙，打开办公桌一侧的抽屉，从其中取出一张卡片放在了办公桌上。
+
+“如果你需要的话，就用这张卡吧。你母亲在这里的时候也一直带着这张卡，不过毕业的时候她就还给我了。”
+
+我拿起卡片，正面和一般的学生卡一样印有学校的全景照片。然而，卡的背面却是一片空白——和一般印有姓名、编号和照片的学生卡完全不同，这让我心中顿生疑窦。
+
+“校长，这样真的好吗？”
+
+“我相信身为她儿子的你，不会做出危害学校纪律的事。既然信任一个人，就应该信任到底。”
+
+细细品味着校长话语中重量的我，想起了一句经常见到的话。
+
+——能力越大，责任越大。
+
+反过来，背负的责任越重，就需要表现出更强的能力。意识到这一点的我，向校长深鞠了一躬。
+
+“非常感谢您的信任，我会将您今天教导我的话铭记于心。不过，随身携带这张卡可能会引起不必要的注意，请问我是否可以向您申请将这张卡的权限复制到我本人的学生卡上，再将这张卡还回来？”
+
+“没关系，你稍等一下吧。”
+
+入江校长从办公桌上的打印机托盘中抽出一张纸，在上面写下一段内容，签字盖章之后，示意我将文件取走。
+
+确认获得复制卡片权限许可后，我再次向校长鞠了一躬。
+
+“感谢您的好意，那么我就先行告退了。”
+
+“我很期待政树你的新生代表致辞哦。”
+
+抬起上半身的我，看到了入江校长的微笑。随后我将文件折起放入书包，把空白卡片塞入裤子左侧的口袋，离开了校长办公室，反身将房门轻轻关好。
+
+***
