--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -28,7 +28,7 @@
 
 我接过入江校长递过来的分班表，没过一分钟就在上面找到了自己的名字。
 
-雨宫政树（Amamiya Masaki）。一年A班。出席号码——不出意外的是1号。
+雨宫政树（Amamiya Masaki）。一年A班。出席号码——不出意外是1号。
 
 “非常感谢。入江校长，我听家母说学校里似乎有一个放了一架钢琴的教室……”
 
