--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -75,3 +75,25 @@
 抬起上半身的我，看到了入江校长的微笑。随后我将文件折起放入书包，把空白卡片塞入裤子左侧的口袋，离开了校长办公室，反身将房门轻轻关好。
 
 ***
+
+在入江校长面前说出的内容，到底哪些是真哪些是假，连我自己也搞不清楚。
+
+唯独铭记在心的，是绝不可滥用这张空白卡片具备的权限——在1年A班的门前纠结许久的我，最终在走廊上又站了二十来分钟。等到有老师过来刷卡打开教室正门的时候，手机上显示的时间已经到了7点30分。
+
+走进空无一人的教室中的我，自然不需要说什么“你好”之类的问候话语，而是径直坐在离门口最近的座位上，把书包挂在桌边，继续翻阅手中的笔记本。
+
+笔记本上写着新生代表致辞的详细提纲。得益于那个女人提供的参考资料，我在之前的三四天里便将大致的内容构思完毕——但在构思的过程中，我曾数次陷入烦恼。
+
+究其原因，是因为我十分清楚，相比参考资料中的致辞者们，我的性格中存在着肉眼可见且极为致命的缺陷。
+
+自上小学起成绩就一直位于前列的我，在参加这所学校中等部的编入考试时，因发挥失常而没能获得入学资格，只能进入附近的公立学校。当我拿着成绩单回到家中的时候，那个女人露出了相当不爽的神色，并说出了这样的一段话：
+
+『你真的以为那些和你关系不错的的人会对你心存善意吗？他们只不过是心存嫉妒，想把你从高处扯下来罢了。一旦他们实现这个目的，就会像丢掉一块破抹布一般立刻把你抛弃掉。』
+
+随后那个女人把我关进了更衣室中，从外面将门锁上，要我思考自己有哪里做的不对——而且不许我点亮更衣室中的灯。
+
+直到第二天清晨，她才把我放了出来。
+
+此前便因为那两个人之间的状况而从未想过带朋友回家玩耍的我，在这一事件之后再也无法信任身边的同龄人。
+
+初中的三年里，被这一心态支配的我和同学之间的距离迅速拉开。因此我虽然成绩优异，但却从未在班级中担任过学级委员一类的职务。
