--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -96,4 +96,21 @@
 
 此前便因为那两个人之间的状况而从未想过带朋友回家玩耍的我，在这一事件之后再也无法信任身边的同龄人。
 
-初中的三年里，被这一心态支配的我和同学之间的距离迅速拉开。因此我虽然成绩优异，但却从未在班级中担任过学级委员一类的职务。
+初中的三年里，每当学年初重新分班后，用不了几天，我就会在脑海中根据内心中建立的固有标准对班上的同学们逐个挑刺，对他们可能对我造成的不良后果进行估算，同时尽可能将自己从班级的气氛中剥离出去。当我不得不与他们接触时，就得时刻保持有所警惕的心态，并且减少不必要的交流。
+
+在这一行动模式之下和同学之间的距离迅速拉开的我，虽然成绩优异，却从未和身边的学生们建立什么联系。连关系良好的同性朋友都举不出一两个，更别说异性了。
+
+在这样的处境下，我自然也没什么机会担任班级中的各类职务，像今天这样以新生代表的身份面向台下的学生们发言，更是从未有过的体验。
+
+然而在我看来，无法亲身理解周围同学们的内心，却不意味着无法根据已有的资料模仿出理解他们的样子——或者更进一步，对他们的内心加以某种程度的操纵。
+
+我的视线落在提纲最后，用红色马克笔写出的几行字上面。
+
+> 在演讲开始的时候，必须保持平缓的语速，并通过各类话题试探听众们感兴趣的内容。
+>
+> 一旦察觉到某个话题最能调动现场情绪，立刻以爆发式的演讲激发听众的情绪。
+>
+> 在调动听众情绪时，通过调节速度和力度，让听众们为他们听到的内容而沉醉。绝不可吝惜自己的体力和精神力。
+>
+> 必要时，要站在听众们中间演讲，营造出“我和你们在一起”的氛围。除此之外，也可以选择从听众中而非演讲台后面走到台上。
+
