--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -114,3 +114,8 @@
 >
 > 必要时，要站在听众们中间演讲，营造出“我和你们在一起”的氛围。除此之外，也可以选择从听众中而非演讲台后面走到台上。
 
+拜那个女人的教育方针所赐，我曾在小学期间随她的一位朋友学习过数年声乐和钢琴。后者姑且不论，前者让我在初中时，曾被音乐老师评价为“有着和其他人截然不同的声音”——当时学校的合唱部有意招募我加入，但我在思考一番后还是拒绝了。
+
+但如今仔细想想，自己的嗓音说不准可以成为生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
+
+与初中时代不同，我并没有在高中三年的生活中在表面上与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是这一伪装工作的第一步。
