--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -118,4 +118,4 @@
 
 但如今仔细想想，自己的嗓音说不准可以成为生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
 
-与初中时代不同，我并没有在高中三年的生活中在表面上与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是这一伪装工作的第一步。
+与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是这一伪装工作的第一步。
