--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -98,7 +98,7 @@
 
 初中的三年里，每当学年初重新分班后，用不了几天，我就会在脑海中根据内心中建立的固有标准对班上的同学们逐个挑刺，对他们可能对我造成的不良后果进行估算，同时尽可能将自己从班级的气氛中剥离出去。当我不得不与他们接触时，就得时刻保持有所警惕的心态，并且减少不必要的交流。
 
-在这一行动模式之下和同学之间的距离迅速拉开的我，虽然成绩优异，却从未和身边的学生们建立什么联系。连关系良好的同性朋友都举不出一两个，更别说异性了。
+在这一行动模式之下迅速和同学们疏远的我，虽然成绩优异，却从未和他们建立什么联系。连关系良好的同性朋友都举不出一两个，更别说异性了。
 
 在这样的处境下，我自然也没什么机会担任班级中的各类职务，像今天这样以新生代表的身份面向台下的学生们发言，更是从未有过的体验。
 
