--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -118,4 +118,20 @@
 
 但如今仔细想想，自己的嗓音说不准可以成为生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
 
-与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是这一伪装工作的第一步。
+与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是伪装工作的第一步。
+
+“初次见面，从座位看你就是……”
+
+一个男生的声音闯入了我的耳朵。我抬起头，发现教室里多了几个人，而发出声音的那个男生就站在我的课桌旁边。从说出的内容来看，他大概已经知道了我的身份。
+
+“我是雨宫政树。这一年请多多关照。”
+
+从座位上站起的我，露出不知算真心还是应付的笑容回答。
+
+“请多关照，我是工藤俊雄（Kudou Toshio）。之前似乎没见过你，是从外面考进来的吗？”
+
+“对，我是外部编入生。”
+
+“那可真不容易啊，毕竟相比校内中等部还多了一轮考试，每年能考进来的人可不多。”
+
+高等部的外部编入考试招生名额是根据中等部每一年退学或是考到其他高中去的学生人数决定的，据称还发生过一两次不接受外部学生考入的情况——按那个女人的说法，这对想要从外部考入这所学校的学生们，可以说是相当大的不幸了。但即使如此，想要从外部考入这所学校，仍然是难上加难。
