--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -135,3 +135,13 @@
 “那可真不容易啊，毕竟相比校内中等部还多了一轮考试，每年能考进来的人可不多。”
 
 高等部的外部编入考试招生名额是根据中等部每一年退学或是考到其他高中去的学生人数决定的，据称还发生过一两次不接受外部学生考入的情况——按那个女人的说法，这对想要从外部考入这所学校的学生们，可以说是相当大的不幸了。但即使如此，想要从外部考入这所学校，仍然是难上加难。
+
+“说起来，外部编入考试的那天……嗯，对，是那天没错。我中午去小餐厅的时候，看到大厅里有一对超漂亮的双胞胎姐妹抱在一起哭的稀里哗啦的。我当时上去安慰了一下，她们中的一个对我讲，教室里有一个写字速度快得吓人的男生，自己完全跟不上他。越往后她内心的精神压力就越大，最后连题都没能答完。”
+
+还有这回事？我在脑海中搜索了一下。工藤所说的那天上午——考的应该是数学。在响铃收卷的时候，考场中的确有五六个人还没停笔，就直接被监考老师收走了答题纸。当场嚎啕大哭的学生的确有，但我也不记得是哪几个了。
+
+“那她们后来考上了吗？”
+
+听到我的问题，工藤摇了摇头。
+
+“我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的可爱女生排行榜就有新的乐子看了。”
