--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -145,3 +145,45 @@
 听到我的问题，工藤摇了摇头。
 
 “我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的可爱女生排行榜就有新的乐子看了。”
+
+“有乐子看？嗯……那个所谓的『可爱女生排行榜』又是个什么东西？”
+
+虽然我在初中时比起同性，在异性面前更不掩饰自己攻击性的态度，但出于伪装自我的需要，还是问一下工藤这个看上去是花花公子的男生好了。
+
+“那个是这所学校里的男生们私下里建群组织的投票。给你看看。”
+
+工藤掏出手机点了几下，随后向我递了过来。我接过手机，看向上面的内容——随后便被一个似乎见过的名字吸引了视线。
+
+“这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？”
+
+“当然是一起算的。柏原千夏（Kashiwabara Chika）……她可不简单，没记错的话……应该是去年中等部的新生代表？第一学期的中期投票她就冲到了第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置。学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
+
+“女王”、“公主”和“天使”……这帮男生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
+
+“‘公主大人’……嗯，名字是……森山真咲（Moriyama Masaki）？你说她在这个班？”
+
+“这不刚从你面前走过去嘛。”
+
+我抬头向左看去，一名留着长发的女生一边和周围的同学们打招呼一边向教室里侧走去。上下打量了一下，森山的长相的确配得上“公主”这个称号，但姑且不论可爱与否，我并不觉得她漂亮到足以让人心动的地步——大概是我的审美标准出了什么差错吧。
+
+手机上显示的时间快到了预备铃响的时刻。我将手机还给工藤，又问了一个问题：
+
+“能把我拉进这个群不？虽然我在这个群估计也不会讲什么话，不过也可以帮忙统计一下票数。”
+
+“也行啊。先加个好友？”
+
+“OK，那我开下Linie。”
+
+我掏出手机操作了几下，调出二维码给工藤看。他扫了一下，向我示意之后，我拿回手机，看到了Linie显示的通知。
+
+【Toshio_K申请成为您的好友】
+
+我点击确认之后，发了一条信息过去。
+
+【MSK：OK?】
+
+【Toshio_K：OK。一会HR开完了我把你拉进群里。】
+
+【MSK：thx】
+
+预备铃响了起来，工藤不慌不忙地回到了自己的座位上。一个理着平头，戴黑色窄框眼镜，看上去二十七八岁的男性教师走到了讲台上。
