--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -187,3 +187,9 @@
 【MSK：thx】
 
 预备铃响了起来，工藤不慌不忙地回到了自己的座位上。一个理着平头，戴黑色窄框眼镜，看上去二十七八岁的男性教师走到了讲台上。
+
+“各位同学大家好，我是一年A班的班主任菅田宽治（Suda Kanji），负责的科目是数学。接下来的一年里，还请各位多多关照。那么，请从最右边的同学开始自我介绍吧。”
+
+闭上双眼，深吸一口气后，我从座位上站起，开始为期三年的伪装计划。
+
+“各位同学大家好。我的名字是雨宫政树……”
