--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -16,7 +16,7 @@
 
 “这是家母托我送来的的一点礼物，还请校长您能收下。”
 
-“你这么说可就见外了，政树。这所学校能够有如此积极向上的氛围，你母亲在其中也起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。”
+“你这么说可就见外了，政树。这所学校能够有如此积极向上的氛围，你母亲在其中可是起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。”
 
 面前这位语调和蔼，头发花白的女性，便是这所学校的校长入江范子——在那个女人就读这所学校的三年中，入江校长一直是她的班主任。拜这一关系所赐，我曾随那个女人数次到校长的府上拜访。
 
@@ -30,9 +30,9 @@
 
 雨宫政树（Amamiya Masaki）。一年A班。出席号码——不出意外是1号。
 
-“非常感谢。入江校长，我听家母说学校里似乎有一个放了一架钢琴的教室……”
+“非常感谢。入江校长，我听家母说学校里似乎有个放了一架钢琴的教室……”
 
-“说的是**那间房间**对吧，你母亲的记忆力可真好。虽然有人定期维护，不过这二十多年来，还从没有学生进去过。”
+“说的是**那间房间**对吧，你母亲的记忆力可真好。虽然有人定期维护，不过这二十多年来，那个房间还从没有学生进去过。”
 
 入江校长露出了若有所思的表情，随后继续说道：
 
@@ -48,11 +48,11 @@
 
 “如果你需要的话，就用这张卡吧。你母亲在这里的时候也一直带着这张卡，不过毕业的时候她就还给我了。”
 
-我拿起卡片，正面和一般的学生卡一样印有学校的全景照片。然而，卡的背面却是一片空白——和一般印有姓名、编号和照片的学生卡完全不同，这让我心中顿生疑窦。
+我拿起卡片，正面和一般的学生卡一样印有先前在主入口看到的那行字和学校的全景照片。然而，卡的背面却是一片空白——和一般印有姓名、编号和照片的学生卡完全不同，这让我心中顿生疑窦。
 
 “校长，这样真的好吗？”
 
-“我相信身为她儿子的你，不会做出危害学校纪律的事。既然信任一个人，就应该信任到底。”
+“我相信身为她儿子的你，不会做出违反学校纪律的事。而且，既然信任一个人，就应该信任到底。”
 
 细细品味着校长话语中重量的我，想起了一句经常见到的话。
 
@@ -78,7 +78,7 @@
 
 在入江校长面前说出的内容，到底哪些是真哪些是假，连我自己也搞不清楚。
 
-唯独铭记在心的，是绝不可滥用这张空白卡片具备的权限——在1年A班的门前纠结许久的我，最终在走廊上又站了二十来分钟。等到有老师过来刷卡打开教室正门的时候，手机上显示的时间已经到了7点30分。
+唯独铭记在心的，是绝不可滥用这张空白卡片具备的权限——在一年A班的门前纠结许久的我，最终在走廊上又站了二十来分钟。等到有老师前来刷卡打开教室前后的门的时候，手机上显示的时间已经到了7点15分。
 
 走进空无一人的教室中的我，自然不需要说什么“你好”之类的问候话语，而是径直坐在离门口最近的座位上，把书包挂在桌边，继续翻阅手中的笔记本。
 
@@ -88,25 +88,25 @@
 
 自上小学起成绩就一直位于前列的我，在参加这所学校中等部的编入考试时，因发挥失常而没能获得入学资格，只能进入附近的公立学校。当我拿着成绩单回到家中的时候，那个女人露出了相当不爽的神色，并说出了这样的一段话：
 
-『你真的以为那些和你关系不错的的人会对你心存善意吗？他们只不过是心存嫉妒，想把你从高处扯下来罢了。一旦他们实现这个目的，就会像丢掉一块破抹布一般立刻把你抛弃掉。』
+『你真的以为，那些看上去和你关系不错的的人对你心存善意吗？他们只不过是心存嫉妒，想把你从高处扯下来罢了。一旦他们实现这个目的，就会像丢掉一块破抹布一般立刻把你抛弃掉。』
 
 随后那个女人把我关进了更衣室中，从外面将门锁上，要我思考自己有哪里做的不对——而且不许我点亮更衣室中的灯。
 
 直到第二天清晨，她才把我放了出来。
 
-此前便因为那两个人之间的状况而从未想过带朋友回家玩耍的我，在这一事件之后再也无法信任身边的同龄人。
+原本我在小学时还算是有几个关系还不错的朋友，但因为那两个人之间的状况，我从未产生过带他们到自己家玩耍的想法。而在这一事件之后，我不仅和他们断了联系，而且再也无法信任周围的同龄人。
 
-初中的三年里，每当学年初重新分班后，用不了几天，我就会在脑海中根据内心中建立的固有标准对班上的同学们逐个挑刺，对他们可能对我造成的不良后果进行估算，同时尽可能将自己从班级的气氛中剥离出去。当我不得不与他们接触时，就得时刻保持有所警惕的心态，并且减少不必要的交流。
+初中的三年里，每当学年初重新分班后，用不了几天，我就会在脑海中根据内心预设的一套标准对班上的同学们逐个挑刺，对他们可能对我造成的不良后果进行估算，同时尽可能将自己从班级的气氛中剥离出去。而当我不得不与他们接触时，则时刻保持有所警惕的心态，并且减少不必要的交流。
 
-在这一行动模式之下迅速和同学们疏远的我，虽然成绩优异，却从未和他们建立什么联系。连关系良好的同性朋友都举不出一两个，更别说异性了。
+在这一行动模式之下迅速和同学们疏远的我，虽然成绩优异，却连同性朋友都举不出一两个，更别说异性了。
 
-在这样的处境下，我自然也没什么机会担任班级中的各类职务，像今天这样以新生代表的身份面向台下的学生们发言，更是从未有过的体验。
+在这样的处境下，我自然也没什么机会担任班级中的各类职务。像今天这样以新生代表的身份面向台下的学生们发言，更是从未有过的体验。
 
-然而在我看来，无法亲身理解周围同学们的内心，却不意味着无法根据已有的资料模仿出理解他们的样子——或者更进一步，对他们的内心加以某种程度的操纵。
+然而在我看来，无法理解周围同学们的内心，却并不意味着无法根据已有的资料模仿出理解他们内心的样子——或者更进一步，对他们的内心加以某种程度的操纵。
 
-我的视线落在提纲最后，用红色马克笔写出的几行字上面。
+我的视线落在提纲最后，用红色马克笔写出的几行字上面：
 
-> 在演讲开始的时候，必须保持平缓的语速，并通过各类话题试探听众们感兴趣的内容。
+> 在演讲开始的时候，尽可能保持平缓的语速，并通过各类话题试探听众们感兴趣的内容。
 >
 > 一旦察觉到某个话题最能调动现场情绪，立刻以爆发式的演讲激发听众的情绪。
 >
@@ -116,27 +116,27 @@
 
 拜那个女人的教育方针所赐，我曾在小学期间随她的一位朋友学习过数年声乐和钢琴。后者姑且不论，前者让我在初中时，曾被音乐老师评价为“有着和其他人截然不同的声音”——当时学校的合唱部有意招募我加入，但我在思考一番后还是拒绝了。
 
-但如今仔细想想，自己的嗓音说不准可以成为生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
+现在一想，自己的嗓音说不准可以成为此后生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
 
-与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己对他们的冷淡态度做一番伪装，让同学们产生我这个人不难友善相处的印象。而新生代表致辞，便是伪装工作的第一步。
+与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己的这番冷淡态度加以掩盖，让同学们产生我是个可以友好相处的人的印象。而身为新生代表进行致辞，便是这一伪装工作的第一步。
 
 “初次见面，从座位看你就是……”
 
-一个男生的声音闯入了我的耳朵。我抬起头，发现教室里多了几个人，而发出声音的那个男生就站在我的课桌旁边。从说出的内容来看，他大概已经知道了我的身份。
+一个男生的声音闯入了我的耳朵。我抬起头，发现教室里多了几个人，而发出声音的那个男生就站在我的课桌旁边。从他说出的内容来看，他大概已经知道了我的身份。
 
 “我是雨宫政树。这一年请多多关照。”
 
-从座位上站起的我，露出不知算真心还是应付的笑容回答。
+从座位上站起的我，露出不知算真心还是应付的笑容回应。
 
 “请多关照，我是工藤俊雄（Kudou Toshio）。之前似乎没见过你，是从外面考进来的吗？”
 
 “对，我是外部编入生。”
 
-“那可真不容易啊，毕竟相比校内中等部还多了一轮考试，每年能考进来的人可不多。”
+“那可真不容易啊，毕竟相比校内的中等部学生们还多了一轮考试，而且每年能考进来的人可不多。”
 
-高等部的外部编入考试招生名额是根据中等部每一年退学或是考到其他高中去的学生人数决定的，据称还发生过一两次不接受外部学生考入的情况——按那个女人的说法，这对想要从外部考入这所学校的学生们，可以说是相当大的不幸了。但即使如此，想要从外部考入这所学校，仍然是难上加难。
+高等部的外部编入考试招生名额，是根据中等部每一年退学或是考到其他高中去的学生人数决定的。因此想要从外部考入这所学校，可以说是难上加难。据称还发生过一两次因没有名额而不接受外部学生考入的情况——按那个女人的说法，这可以说是相当大的不幸了。
 
-“说起来，外部编入考试的那天……嗯，对，是那天没错。我中午去小餐厅的时候，看到大厅里有一对超漂亮的双胞胎姐妹抱在一起哭的稀里哗啦的。我当时上去安慰了一下，她们中的一个对我讲，教室里有一个写字速度快得吓人的男生，自己完全跟不上他。越往后她内心的精神压力就越大，最后连题都没能答完。”
+“说起来，外部编入考试的那天……嗯，对，是那天没错。我中午去小餐厅的时候，看到楼下大厅里有一对超漂亮的双胞胎姐妹抱在一起哭的稀里哗啦的。我当时上去安慰了一下，听她们中的一个对我讲，教室里有一个写字速度快得吓人的男生，自己完全跟不上他。越往后她内心的精神压力就越大，最后连题都没能答完。”
 
 还有这回事？我在脑海中搜索了一下。工藤所说的那天上午——考的应该是数学。在响铃收卷的时候，考场中的确有五六个人还没停笔，就直接被监考老师收走了答题纸。当场嚎啕大哭的学生的确有，但我也不记得是哪几个了。
 
@@ -150,13 +150,13 @@
 
 虽然我在初中时比起同性，在异性面前更不掩饰自己攻击性的态度，但出于伪装自我的需要，还是问一下工藤这个看上去是花花公子的男生好了。
 
-“那个是这所学校里的男生们私下里建群组织的投票。给你看看。”
+“是这所学校里的男生们私下里建群组织的投票，我给你看看好了。”
 
 工藤掏出手机点了几下，随后向我递了过来。我接过手机，看向上面的内容——随后便被一个似乎见过的名字吸引了视线。
 
 “这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？”
 
-“当然是一起算的。柏原千夏（Kashiwabara Chika）……她可不简单，没记错的话……应该是去年中等部的新生代表？第一学期的中期投票她就冲到了第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置。学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
+“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置，学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
 
 “女王”、“公主”和“天使”……这帮男生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
 
@@ -164,11 +164,11 @@
 
 “这不刚从你面前走过去嘛。”
 
-我抬头向左看去，一名留着长发的女生一边和周围的同学们打招呼一边向教室里侧走去。上下打量了一下，森山的长相的确配得上“公主”这个称号，但姑且不论可爱与否，我并不觉得她漂亮到足以让人心动的地步——大概是我的审美标准出了什么差错吧。
+我抬头向左看去，一名留着长发的女生一边和周围的同学们打招呼一边向教室里侧走去。上下打量了一下，森山的长相的确配得上“公主”这个称号。但姑且不论可爱与否，我并不觉得她漂亮到足以让人心动的地步——大概是我的审美标准出了什么差错吧。
 
 手机上显示的时间快到了预备铃响的时刻。我将手机还给工藤，又问了一个问题：
 
-“能把我拉进这个群不？虽然我在这个群估计也不会讲什么话，不过也可以帮忙统计一下票数。”
+“能把我拉进这个群不？虽然我在这个群可能不会讲什么话，不过也可以帮忙统计一下票数。”
 
 “也行啊。先加个好友？”
 
