--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -1,1 +1,34 @@
 ### #03 La cashita Chambro
+
+身旁的长桌上放着一本小说，而恰巧从此处经过的我，目光落在了印在小说封面的标题和作者上面。
+
+小说的作者是人尽皆知的文豪。然而大多数人都不知道，或者不会在乎的一个事实是——这本小说是他剽窃了自己的一位崇拜者——或者也可以说是“学生”——的日记而创作出来的。
+
+不，这个说法并不准确。名声斐然的文豪向这位女学生提出了请求，希望她“写一本日记”作为自己创作的素材。而他付出的代价，不过是和他的这位崇拜者有了身体上的关系——还是那位学生自己提出来的，因为她希望为这位文豪生下一个孩子。
+
+小说出版，婴儿出生，文豪从自己的名字中取了一个字给她命名——一切都是如此的顺其自然，但他直到和另一位情妇投水自尽之前，都从未见过这位私生女。
+
+两三年前，我在书店中偶然发现了一本记载了上述内容的书——或者说，是这位文豪的私生女写下的回忆录。
+
+“为什么他们为了这样的目的就把我生下来”——我并不确定如今同样名声显赫的这位女性小说家会不会产生这样的怀疑，但如果我是她的话，大概就会这样想吧。
+
+不过仔细想想，大言不惭的提出索要创作素材的请求，又在产生了身体上的关系后置之不理，倒也很符合“无赖”这个对文豪的评价就是了。
+
+像他一样，在创作领域有着突出成就的同时，私生活十分混乱的人还有不少。
+
+就以如今还在我书包中的那一套五册的长篇小说的作者为例吧。生前便已在文坛风生水起，死后更是享受国葬待遇的这位传奇小说家，在他的长篇小说中毫无顾虑地将自己的正妻和情妇融合成同一个角色——这倒也不是他第一次这么干了，毕竟在创作这部小说的几十年前，他就在某部诗集中收录过对两位女性分别倾诉情愫的不同作品，为此还让一位暗恋过他妻子的文学评论家大为光火。
+
+说来讽刺，那位文学评论家与这位小说家决裂的起因并非评论家和他妻子的地下关系被发现，而是因为小说家与当时还是一位演员的那位情妇坠入爱河。这么一想，将文学评论变成一门独立领域的这位评论家，说不准是个同性爱者吧。
+
+类似的同性爱者，还有那位把钢琴协奏曲写的头重脚轻，让绝大多数听众忘记这首协奏曲除了长达两分半钟的序幕之外还有别的内容存在的作曲家。据说他以知名恋爱悲剧为主题创作的交响序曲中，就蕴含了他对自己深爱的男学生——这位男学生在19岁的时候自杀身亡——的情感。他在那个改过三四次名字的城市里有不少同性爱人，而所谓的婚姻也只不过是虚应故事。直到创作人生最后一部作品的时候，他都和自己的外甥以同性伴侣的身份过着幸福美满的生活。除此之外，连他的死亡都被一些人认为是因性取向被告发导致的结果——对外宣称是死于霍乱，而实际上则是自杀身亡。
+
+平心而论，在如今这个网络高度发达的信息时代，这些都不是什么需要花大力气才能挖掘出来的内容。然而世间的大多数人仍然沉迷于“表面”的作品之中，而对水面下的“真相”或是一无所知，或是视而不见。
+
+正如上午的入学式上，当我结束新生代表致辞时，那些禁不住发出欢呼并回以热烈掌声的同级生们，以及通过广播收听致辞的高年级学生们，也不会知道我用红色马克笔写在笔记本上的那几行字，乃是那个将上亿人拖入地狱深渊的人的演讲风格一样。
+
+“那些对真相一无所知或是视而不见的人，说不准更幸福一些。”
+
+——我在心里自言自语着，向位于图书馆正中的螺旋楼梯走去。
+
+&emsp;
+
