--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -1,6 +1,22 @@
 ### #03 La cashita Chambro
 
-身旁的长桌上放着一本小说，而恰巧从此处经过的我，目光落在了印在小说封面的标题和作者上面。
+&emsp;
+
+入学式结束后，我收到了工藤发来的消息——内容也不出意料，是问我要不要和同学们一起去卡拉OK搞搞联谊。虽然在我还在上小学的时候，那个女人没少让我在她研究室的学生们面前亮嗓子，但次数一多起来，我也产生了一定程度的抵抗心理。而在被她关进更衣室的那个晚上之后，我就更不愿意在陌生人面前唱歌了。
+
+于是我给工藤发了一条内容为「入学式上的消耗有点大，下午我想休息一下」的消息就推掉了邀请——这倒也不算信口雌黄。在我这个之前没有任何类似经验的体力废物看来，将笔记本上的提纲变为实际致辞的内容，还要在这个过程中调整语调和肢体动作，对脑细胞可以说是一场苦战了。
+
+而且，我还得去一趟管理学生卡的办公室，将口袋里那张空白卡片的权限复制到自己的学生卡上，再把卡片还给校长。不趁着今天入学式结束大家回宿舍休息而无心留在教学楼的功夫搞完这件事，之后只会产生不必要的麻烦。
+
+在教学楼中东奔西走跑完这套流程后，手机上显示的时间已经快到了下午2点。位于对面宿舍楼的大食堂这个时候肯定不可能还开着，我只好搭乘电梯，回到大厅后走到教学楼一端的小餐厅，随便拿了一个火腿三明治，又从饮料区取了瓶MTD走到服务台，拜托工作人员从旁边的架子上取下一个内含坚果的能量棒，这才刷卡完成结算，坐到位于角落的座位上，在点亮手机阅读在线连载小说的过程中，享受这份堪称简约的午餐。
+
+——反正今天也没什么人，就去试试被放置在**那个房间**的那台钢琴好了。
+
+我把还剩半瓶的MTD丢进书包，向位于小餐厅正对面的图书馆走去。考虑到计划停留的时间，我还在半途走进便利店买了三瓶纯净水。刷卡通过图书馆门口的闸机后，我走入了这个学校中最为安静的场所。
+
+&emsp;
+
+身旁的长桌上放着一本小说。恰巧经过的我，目光落在了印在小说封面的标题和作者上面。
 
 小说的作者是人尽皆知的文豪。然而大多数人都不知道，或者不会在乎的一个事实是——这本小说是他剽窃了自己的一位崇拜者——或者也可以说是“学生”——的日记而创作出来的。
 
@@ -29,6 +45,3 @@
 “那些对真相一无所知或是视而不见的人，说不准更幸福一些。”
 
 ——我在心里自言自语着，向位于图书馆正中的螺旋楼梯走去。
-
-&emsp;
-
