--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -45,3 +45,52 @@
 “那些对真相一无所知或是视而不见的人，说不准更幸福一些。”
 
 ——我在心里自言自语着，向位于图书馆正中的螺旋楼梯走去。
+
+&emsp;
+
+刚沿着螺旋楼梯走进底层，就传来一阵难以忽略的湿冷感觉。和与大厅相通的上层不同，底层几乎被埋在地下——我向后看了一眼，墙壁上有一扇上面挂着《紧急出口》标记的门。
+
+我之前把行李搬进宿舍的时候，曾听管理宿舍的教师提到这所校园原本是天道大学的旧校区，因而教学楼下面有一个巨大的车库。能够打开这扇大概通向车库的门的卡片，大概只有学校负责安保的教师和管理图书馆的教师的职工卡，校长手中的那张空白卡片，以及——
+
+我不由得想起之前在办公室的时候，于复制卡片权限的电脑显示屏上瞥见的程序日志。
+
+> 可开启的电子锁列表：ALL
+>
+> 每日有效时间：00:00:00至23:59:59
+>
+> 生效日期：19xx-xx-xx
+>
+> 失效日期：20xx-xx-xx
+
+『这所学校能够有如此积极向上的氛围，你母亲在其中可是起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。』
+
+入江校长的话在脑海中浮现，让我想起了当时冒出的另一个念头。
+
+——背负的责任越重，就需要表现出更强的能力。
+
+那个女人并没有在我面前提到过太多在这所学校就读时的经历。但如果她的确在高中三年间一直持有那张空白卡片，大概——
+
+我想到了一个近乎恐怖的可能性。
+
+在我的记忆中，那个女人带我去她的闺蜜家做客的时候，多数时间都是在和闺蜜们对不在现场的女性朋友评头品足。而这种评头品足的对象，也包括不在场者的孩子。
+
+如果是这样的话，**那个女人在这所学校就读时，就已将自己的孩子进入这所学校作为既定事项进行考虑了。她在这个学校中所做的一切贡献，都是为了让这个孩子在学校中成为她想要的样子。**
+
+如同行驶在轨道上的列车一般的我，根本难以想象出擅自调整速度的状况，更不要说脱离轨道了。
+
+——必须赶紧弹一会钢琴，让自己的脑子冷静下来。
+
+回过头去的我尽可能不出声音地加快脚步穿过通道，走到与紧急出口位于反方向的门前，掏出口袋中的学生卡在电子锁上刷了一下。
+
+短促但尖锐的开锁声音把我吓了一跳，仓促间滑了一下的脚在地上发出刺耳的声音。我左右看去，阅览区只有一个趴在桌子上像是在睡觉的女生。她稍微动了动，但并没有坐起来的迹象。
+
+——要是被那个女生看到我这个狼狈样子，可就真是衰到家了。
+
+我赶紧把门拉开一道缝，穿过去后再轻轻关上，进入伸手不见五指的空间之中。随后我点亮手机，发现面前又是一道通向下方的楼梯。将楼梯的台阶数量和高度大略记下后，左手摸着墙壁的我，凭借直觉走完了通向**那个房间**的最后一段路。
+
+&emsp;
+
+——早知道会这样，我真该先回宿舍，从行李箱里翻一件厚衣服带出来的。
+
+即使这个房间似乎保持着通风设施常年工作的状态，但空气仍然给人一种又冷又潮的感觉，让我不禁直打哆嗦，花了十来分钟才适应下来。
+
