--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -2,7 +2,7 @@
 
 &emsp;
 
-入学式结束后，我收到了工藤发来的消息——内容也不出意料，是问我要不要和同学们一起去卡拉OK搞搞联谊。虽然在我还在上小学的时候，那个女人没少让我在她研究室的学生们面前亮嗓子，但次数一多起来，我也产生了一定程度的抵抗心理。而在被她关进更衣室的那个晚上之后，我就更不愿意在陌生人面前唱歌了。
+入学式结束后，我收到了工藤发来的消息——内容不出意料，是问我要不要和同学们一起去卡拉OK搞搞联谊。虽然在我还在上小学的时候，那个女人没少让我在她研究室的学生们面前亮嗓子，但次数一多起来，我也产生了一定程度的抵抗心理。而在被她关进更衣室的那个晚上之后，我就更不愿意在陌生人面前唱歌了。
 
 于是我给工藤发了一条内容为「入学式上的消耗有点大，下午我想休息一下」的消息就推掉了邀请——这倒也不算信口雌黄。在我这个之前没有任何类似经验的体力废物看来，将笔记本上的提纲变为实际致辞的内容，还要在这个过程中调整语调和肢体动作，对脑细胞可以说是一场苦战了。
 
@@ -92,5 +92,32 @@
 
 ——早知道会这样，我真该先回宿舍，从行李箱里翻一件厚衣服带出来的。
 
-即使这个房间似乎保持着通风设施常年工作的状态，但空气仍然给人一种又冷又潮的感觉，让我不禁直打哆嗦，花了十来分钟才适应下来。
+即使这个房间似乎保持着通风设施常年工作的状态，但空气仍然给人一种又冷又潮的感觉，让我不禁直打哆嗦。花了十来分钟适应环境，又将钢琴凳调好高度的我，决定挑一些基础内容作为练琴的前菜。
 
+大致让双手找回感觉后，我开始从记忆中提取乐曲，再通过手指输出到面前的黑白琴键上。
+
+前奏曲与赋格。奏鸣曲。练习曲。狂想曲。
+
+巴赫。莫扎特。贝多芬。舒曼。李斯特。
+
+接下来，是将脑海中的交响曲或是协奏曲等大型乐曲变为钢琴可以演奏的形式。这一行为对理解乐谱的要求不低，当无法在网上找到钢琴版的时候，就不得不对总谱记载的内容进行取舍。当年学习声乐和钢琴的时候，对乐理相关的知识往往只能死记硬背，直到最近一两年，我才总算做到阅读总谱的时候，将每一个声部在脑海中播放出正确的声音。即使如此，我能通过这一过程演奏的，也只有一些相对不那么复杂的曲目罢了。
+
+不知不觉中，时间在我的指尖下飞速流逝，逃入这个空间时的恐惧心理，此时已消散了大半。
+
+我点了一下放在谱架上的手机，上面的时间是下午4点。
+
+最后再弹一首曲子，然后就收工回宿舍吧。我深吸了一口气，抬起左手，弹下第一个音符。
+
+巴赫《赋格的艺术》，BWV.1080，对位曲（Contrapunctus）XIV。
+
+按我在网络上看到的内容记载，在巴洛克时代，钢琴这一乐器尚处在发展的过程中。因此也有人认为，以大键琴演奏巴赫的乐曲才是正确的演绎方式——虽然乐器的音色的确可能是演奏乐曲时需要考虑的一个因素，但这一「表象」在对位曲的情况下，并不会产生非常大的影响。
+
+因为名为BACH的主题动机，不论以哪一乐器演奏，都会发出同样音高的乐音。
+
+当这首对位曲的三个主题第一次同时出现后不久，我停下了手指的动作，房间里陷入一片静寂。随后，一种异样的感觉向我袭来。
+
+——门对面有人。
+
+三步并作两步的我猫着腰轻声冲到门口，转动把手将门拉开。
+
+从图书馆一侧的门进入通向这个房间的楼梯前看到的，那个趴在桌子上睡觉的少女，就这样出现在我的面前。
