--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -116,7 +116,7 @@
 
 当这首对位曲的三个主题第一次同时出现后不久，我停下了手指的动作，房间里陷入一片静寂。随后，一种异样的感觉向我袭来。
 
-——门对面有人。
+——上面传来了声音。是人发出来的。
 
 三步并作两步的我穿过房门，猫着腰轻声冲上楼梯，转动把手将门拉开。
 
