--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -1,1 +1,11 @@
 ### #04 Renkonto
+
+&emsp;
+
+——被发现了。
+
+被条件反射驱动而打算说些什么的我，在发出声音前停下了嘴唇的动作。这里是图书馆，决不可发出不必要的声音，然而——
+
+“弹得不错嘛。能让我再听一遍刚才那首乐曲吗？”
+
+站在门对面的女生显然不像我一般顾虑气氛。我向前方看去，周围并没有学生或教师出没的痕迹，那么她有这样的反应倒也算情有可原了。
