--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -118,6 +118,6 @@
 
 ——上面传来了声音。是人发出来的。
 
-三步并作两步的我穿过房门，猫着腰轻声冲上楼梯，转动把手将门拉开。
+三步并作两步的我穿过房门，猫着腰轻声冲上楼梯，转动把手将门推开。
 
 从图书馆一侧的门进入通向这个房间的楼梯前看到的，那个趴在桌子上睡觉的少女，就这样出现在我的面前。
