--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -6,6 +6,16 @@
 
 被条件反射驱动而打算说些什么的我，在发出声音前停下了嘴唇的动作。这里是图书馆，决不可发出不必要的声音，然而——
 
-“弹得不错嘛。能让我再听一遍刚才那首乐曲吗？”
+“弹得不错嘛。刚才那首曲子我可以再听你弹一遍吗？”
 
 站在门对面的女生显然不像我一般顾虑气氛。我向前方看去，周围并没有学生或教师出没的痕迹，那么她有这样的反应倒也算情有可原了。
+
+到底要不要让她踏入下方的这个空间——我闭上眼睛思考了一会，还是决定举手投降。既然被她听到了琴声，就意味着我在学校伪装出的样子对她恐怕并不会起到我期望的效果。
+
+睁开眼睛的我上下打量着面前的女生。她穿着的白色长袖水手服是高等部的制服没错，但缎带却不是一年级的蓝色，而是绿色。这样看去，我应该称呼她为学姐才对。
+
+“好吧，我来为您带路。底下稍微有点冷，学姐最好还是注意一下。”
+
+“我倒也没那么怕冷，还请多多指教了。”
+
+听到学姐毫不在意的回答的我，启动手机背面的闪光灯照亮楼梯。学姐在我身后将门关好，随后跟着我沿楼梯走向下方的房间。
