--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -19,3 +19,9 @@
 “我倒也没那么怕冷，还请多多指教了。”
 
 听到学姐毫不在意的回答的我，启动手机背面的闪光灯照亮楼梯。学姐在我身后将门关好，随后跟着我沿楼梯走向下方的房间。
+
+&emsp;
+
+“你管这叫‘有点’冷吗？你的脑子里对温度是怎么定义的啊？”
+
+“的确只是‘有点’冷吧？我觉得还行啊，难道学姐你这么快就遭不住了吗？”
