--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -25,3 +25,8 @@
 “你管这叫‘有点’冷吗？你的脑子里对温度是怎么定义的啊？”
 
 “的确只是‘有点’冷吧？我觉得还行啊，难道学姐你这么快就遭不住了吗？”
+
+“就以我站在这里的感觉，脑子稍微清楚一点的老师都不会在这里放钢琴好吧！？屋子里又冷又潮的，不做维护的话，用不了多久钢琴就会坏了吧！？”
+
+“那种事又不归我管，我只是找个有钢琴的地方联系罢了。”
+
