--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -28,5 +28,15 @@
 
 “就以我站在这里的感觉，脑子稍微清楚一点的老师都不会在这里放钢琴好吧！？屋子里又冷又潮的，不做维护的话，用不了多久钢琴就会坏了吧！？”
 
-“那种事又不归我管，我只是找个有钢琴的地方联系罢了。”
+“那种事又不归我管，我只是找个有钢琴的地方练习罢了。学姐要是觉得冷的话，穿我这件总行了吧？”
+
+我三下五除二地解开纽扣，脱下制服夹克向学姐丢了过去。
+
+“谢啦……嗯？你是高等部一年级的吗？”
+
+“今年从外部考进来的。怎么了？”
+
+“说实话我有点不太信啊，总觉得立领制服和你比较搭。”
+
+
 
