--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -40,5 +40,8 @@
 
 “你是说我像中等部的吗！就算身高矮了点，但我好歹也是高等部的啊！不信你看！”
 
-我没好气地从口袋中掏出学生卡向学姐递了过去。
+我没好气地从口袋中掏出学生卡向学姐递了过去。她扫了一眼学生卡，若有所思地说道：
+
+“名字……嗯……雨宫政树……2开头的学生编号……确实是高等部没错。不过怎么看都不太像呢，感觉比我上初三的表弟矮了不少的样子。”
+
 
