--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -44,4 +44,6 @@
 
 “名字……嗯……雨宫政树……2开头的学生编号……确实是高等部没错。不过怎么看都不太像呢，感觉比我上初三的表弟矮了不少的样子。”
 
+我一瞬间不知道该怎么回应。直视学姐的眼睛都得稍微抬一点头的我，比小她两岁的表弟更矮也是理所当然的事。不仅如此，我的脑海中并没有庆祝生日的记忆留下，再加上那个女人曾在我上小学时动了手脚的缘故，我甚至会在某些时候发生年龄认知上的混乱。
+
 
