--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -12,7 +12,7 @@
 
 到底要不要让她踏入下方的这个空间——我闭上眼睛思考了一会，还是决定举手投降。既然被她听到了琴声，就意味着我在学校伪装出的样子对她恐怕并不会起到我期望的效果。
 
-睁开眼睛的我上下打量着面前的女生。她穿着的白色长袖水手服是高等部的制服没错，但缎带却不是一年级的蓝色，而是绿色。这样看去，我应该称呼她为学姐才对。
+睁开眼睛的我上下打量着面前的女生。她穿着的白色长袖水手服是高等部的制服没错，但缎带却不是一年级的蓝色，而是二年级的绿色。这样看去，我应该称呼她为学姐才对。
 
 “好吧，我来为您带路。底下稍微有点冷，学姐最好还是注意一下。”
 
