--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -4,6 +4,50 @@
 
 &emsp;
 
+一个蹲在地上的小男孩正在哭泣。
+
+男人和女人站在离他几米远的地方。两个人一开始只是互呛，后面便成了争吵。
+
+玻璃或陶瓷器皿被摔碎的声音在一片空白的空间中不断响起。没过多久，男人和女人便开始大打出手，而那个哭泣的小男孩根本吸引不到他们中任何一个人的注意。
+
+“爸爸，妈妈，求求你们，求求你们，可不可以别再吵架了？”
+
+“我会乖乖做个好孩子的。”
+
+然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸在自己的头上。血液从伤口处流出，在脸上留下数道痕迹。大概小男孩觉得，这样就可以让男人和女人注意到他了吧。
+
+但即使如此，男人和女人的争斗仍然没有任何停下来的迹象。
+
+不知何时，血液已经不再流下，哭泣声也停了下来。小男孩走到一个像是卫生间的地方，艰难地抬起身体，在镜子前洗去脸上的泪水和血迹。随后他关上了卫生间的门，取下架子上的毛巾，绕过门把手认真打了一个结。
+
+——我不想再看到这个样子了。
+
+——他们变成这样都是我的错。
+
+——只要我死掉的话，就不会再看到他们吵架了。
+
+——会不会我死掉之后，他们就不会吵架了呢？
+
+飘在半空中的我，似乎能读到小男孩脑子里的想法。在我的双眼注视之下，小男孩坐在门边，将头放进毛巾绕着的那个圈里。
+
+然而，我的心中却完全无法产生阻止他的念头。
+
+——就这样结束掉吧。
+
+咔嚓一声，小男孩的头垂了下去。
+
+空白空间中的争吵声不知何时停下了。卫生间的门被粗暴地拉开，男人和女人看到了小男孩的尸体。
+
+没过一会，争吵声便再次响起。男人和女人为谁造成了孩子的死而唾沫横飞，却根本无人在意那个已然死去的小男孩。
+
+我就这样冷漠地看着小男孩一点点变得僵硬的尸体，内心中翻滚的感情，除了绝望，再无他物。
+
+因为我知道，这样的场景根本不可能在现实中出现。
+
+因为那个小男孩（我）早就知道，不论自己做什么，不论自己是生是死，都改变不了任何事情。
+
+&emsp;
+
 清晨5点30分。
 
 被闹钟铃声叫醒后，最先映入眼帘的，是头顶右侧半空中的挂衣杆，和左侧放置小型收纳箱的木架。
@@ -12,7 +56,7 @@
 
 今天是开学的第一天——意识到这一点的我，在司空见惯的风景中，按掉吵个不停的手机，揉着眼睛从地上站起。
 
-***
+&emsp;
 
 某处公寓楼的802室，2LDK户型的更衣间——这便是我十多年前随**那两个人**回国后的容身之处。
 
@@ -32,7 +76,7 @@
 
 一来一去之后，住在这间公寓里的人仍然是三个。
 
-***
+&emsp;
 
 走出卫生间的我，看了一眼次卧室的门——不出意料，门仍然紧锁着。
 
@@ -64,7 +108,7 @@
 
 正因如此，我不想再让一个无辜的生命犯下同样的罪行（出生在这个家庭）。
 
-***
+&emsp;
 
 回到主卧室的时候，**那个女人**刚刚醒来。
 
