--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -6,19 +6,27 @@
 
 一个蹲在地上的小男孩正在哭泣。
 
-男人和女人站在离他几米远的地方。两个人一开始只是互呛，后面便成了争吵。
+开始是无声的眼泪，接着是啜泣，最后成了嚎哭。
 
-玻璃或陶瓷器皿被摔碎的声音在一片空白的空间中不断响起。没过多久，男人和女人便开始大打出手，而那个哭泣的小男孩根本吸引不到他们中任何一个人的注意。
+男人和女人站在离他几米远的地方。两个人最初只是互呛，但没多久便成了争吵。玻璃或陶瓷器皿被摔碎的声音在客厅中不断响起。
+
+过了一会，男人和女人开始大打出手。而那个哭泣的小男孩，根本吸引不到他们中任何一个人的注意。
 
 “爸爸，妈妈，求求你们，求求你们，可不可以别再吵架了？”
 
 “我会乖乖做个好孩子的。”
 
-然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸在自己的头上。血液从伤口处流出，在脸上留下数道痕迹。大概小男孩觉得，这样就可以让男人和女人注意到他了吧。
+然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸在自己的头上。
 
-但即使如此，男人和女人的争斗仍然没有任何停下来的迹象。
+咔嚓一声，传来玻璃碎裂的声音。血液从伤口处流出，在脸上留下数道痕迹。
 
-不知何时，血液已经不再流下，哭泣声也停了下来。小男孩走到一个像是卫生间的地方，艰难地抬起身体，在镜子前洗去脸上的泪水和血迹。随后他关上了卫生间的门，取下架子上的毛巾，绕过门把手认真打了一个结。
+大概小男孩觉得，这样就可以让男人和女人注意到他了吧。但即使如此，男人和女人的争斗仍然没有任何停下来的迹象。
+
+不知何时，血液已经不再流下，哭泣声也停了下来。
+
+小男孩走到卫生间，艰难地抬起身体，在镜子前洗去脸上的泪水和血迹。
+
+随后他取下架子上的毛巾，穿过客厅和卧室走进更衣室，将门轻轻关好，又把毛巾绕过门把手，认真打了一个结。
 
 ——我不想再看到这个样子了。
 
@@ -36,9 +44,9 @@
 
 咔嚓一声，小男孩的头垂了下去。
 
-空白空间中的争吵声不知何时停下了。卫生间的门被粗暴地拉开，男人和女人看到了小男孩的尸体。
+客厅中的争吵声不知何时停下了。更衣室的门被粗暴地拉开，男人和女人看到了小男孩的尸体。
 
-没过一会，争吵声便再次响起。男人和女人为谁造成了孩子的死而唾沫横飞，却根本无人在意那个已然死去的小男孩。
+死一般的静寂只持续了几分钟，争吵声便再次响起。男人和女人为谁造成了孩子的死而唾沫横飞，却根本无人在意那个已然死去的小男孩。
 
 我就这样冷漠地看着小男孩一点点变得僵硬的尸体，内心中翻滚的感情，除了绝望，再无他物。
 
