--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -48,11 +48,11 @@
 
 死一般的静寂只持续了几分钟，争吵声便再次响起。男人和女人为谁造成了孩子的死而唾沫横飞，却根本无人在意那个已然死去的小男孩。
 
-我就这样冷漠地看着小男孩一点点变得僵硬的尸体，内心中翻滚的感情，除了绝望，再无他物。
+漠然看着小男孩一点点变得僵硬的尸体的我，内心中翻滚的感情，除了绝望便再无他物。
 
-因为我知道，这样的场景根本不可能在现实中出现。
+因为我（小男孩）知道，这样的场景根本不可能在现实中出现。
 
-因为那个小男孩（我）早就知道，不论自己做什么，不论自己是生是死，都改变不了任何事情。
+因为小男孩（我）知道，不论自己做什么，不论自己是生是死，都改变不了任何事情。
 
 &emsp;
 
