--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -18,9 +18,9 @@
 
 “我会乖乖做个好孩子的。”
 
-然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸在自己的头上。
+然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸了下去。
 
-咔嚓一声，传来玻璃碎裂的声音。血液从伤口处流出，在脸上留下数道痕迹。
+玻璃茶杯咔嚓一声在小男孩的头顶粉碎。血液从伤口处流出，在脸上留下数道痕迹。
 
 大概小男孩觉得，这样就可以让男人和女人注意到他了吧。但即使如此，男人和女人的争斗仍然没有任何停下来的迹象。
 
@@ -44,7 +44,7 @@
 
 ——就这样结束掉吧。
 
-咔嚓一声，小男孩的头垂了下去。
+随着颈椎碎裂的声音，小男孩的头垂了下去。
 
 客厅中的争吵声不知何时停下了。更衣室的门被粗暴地拉开，男人和女人看到了小男孩的尸体。
 
