--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -108,11 +108,9 @@
 
 那是看向**仇人**的眼神。
 
-这里是名为**家庭**的监狱，每一个人都背负名为**家庭关系**的终身苦役。
+大概，**出生在这个世界上**，便是我犯下的**不可饶恕的罪行**。
 
-而我犯下的罪行，大概正是我的**出生**本身。
-
-在我的生命终结之前，我注定只能在这种家庭关系（终身苦役）的重压下生活。
+所以在我的生命终结之前，我注定只能在这个名为家庭的**监狱**中，背负这样的家庭关系（无期徒刑）生活下去。
 
 至于终结我的生命的，是病痛，是意外，还是我自身——时至今日，我仍然无法确定。
 
