--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -110,7 +110,7 @@
 
 大概，**出生在这个世界上**，便是我犯下的**不可饶恕的罪行**。
 
-所以在我的生命终结之前，我注定只能在这个家（监狱）里，背负这样的家庭关系（无期徒刑）生活下去。
+所以我注定只能在这个家（监狱）里，背负这样的家庭关系（无期徒刑）生活下去，直到生命终结为止。
 
 至于终结我的生命的，是病痛，是意外，还是我自身——时至今日，我仍然无法确定。
 
