--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -146,19 +146,19 @@
 
 听到我的问题，工藤摇了摇头。
 
-“我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的可爱女生排行榜就有新的乐子看了。”
+“我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的人气排行榜就有新的乐子看了。”
 
-“有乐子看？嗯……那个所谓的『可爱女生排行榜』又是个什么东西？”
+“有乐子看？嗯……那个所谓的『人气排行榜』又是个什么东西？”
 
-虽然我在初中时比起同性，在异性面前更不掩饰自己攻击性的态度，但出于伪装自我的需要，还是问一下工藤这个看上去是花花公子的男生好了。
+虽然我在初中时并不会对同学们掩饰自己攻击性的态度，但出于伪装自我的需要，还是问一下工藤好了。
 
-“是这所学校里的男生们私下里建群组织的投票，我给你看看好了。”
+“是这所学校里的学生们建群组织的投票，我给你看看好了。”
 
 工藤掏出手机点了几下，随后向我递了过来。我接过手机，看向上面的内容——随后便被一个似乎见过的名字吸引了视线。
 
 “这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？”
 
-“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置，学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
+“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了女生榜的第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置，学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
 
 “女王”、“公主”和“天使”……这帮男生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
 
