--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -148,9 +148,9 @@
 
 “我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的人气排行榜就有新的乐子看了。”
 
-“有乐子看？嗯……那个所谓的『人气排行榜』又是个什么东西？”
+“有乐子看？嗯……『人气排行榜』又是个什么东西？”
 
-虽然我在初中时并不会对同学们掩饰自己攻击性的态度，但出于伪装自我的需要，还是问一下工藤好了。
+平心而论，在初中时并不掩饰对同学攻击性态度的我眼里，所谓的人气排行榜并不具有太多的意义。但出于在新环境中伪装自我的需要，还是问一下工藤好了。
 
 “是这所学校里的学生们建群组织的投票，我给你看看好了。”
 
