--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -46,4 +46,52 @@
 
 我一瞬间不知道该怎么回应。直视学姐的眼睛都得稍微抬一点头的我，比小她两岁的表弟更矮也是理所当然的事。不仅如此，我的脑海中并没有庆祝生日的记忆留下，再加上那个女人曾在我上小学时动了手脚的缘故，我甚至会在某些时候发生年龄认知上的混乱。
 
+“……等等，我好像想起来了。雨宫政树……你是上午在入学式上致辞的新生代表对吧？”
 
+“对啊，怎么了？”
+
+“既然是新生代表，要不要和我一起组个社团？”
+
+“不好意思，学姐，请问我有什么一定要和你组个社团活动的理由吗？”
+
+“如果你不想这个房间的秘密被其他同学知道的话——”
+
+“好了好了，我同意。”
+
+被学姐如此威胁之后，我只好举手投降。投来一个wink的学姐若有所思地继续说了下去：
+
+“名字嘛……我想想，反正我成绩也不错，就叫做题家（问题解答家）协会吧！”
+
+“做题家？”
+
+“你看啊，小说有小说家，音乐有音乐家，美术有美术家，那么做题自然也应该有做题家吧？”
+
+这套理论听起来倒没有什么可供指摘的地方，我干脆放弃思考，继续问问题好了。
+
+“既然如此，我们要解答什么问题？”
+
+“所有的学习科目都可以解答。哦对了，恋爱问题也算作这类问题的一种哦？”
+
+我在脑海中反刍着学姐的话。从上初中以来就过着远离他人生活的我，根本谈不上有什么恋爱经验，只不过从阅读过的作品中汲取了一点相关知识而已。在这样的我看来，恋爱的确可以算作是享受青春的高中生们应当学习的一门科目。
+
+“明白了。那学姐有想过在哪里进行社团活动吗？”
+
+“就这里怎么样？”
+
+“不行。”
+
+我立刻否定了学姐的提议。
+
+“首先，我只想把这里当作自己练琴的地方，而且也不打算让其他人造访这里——当然学姐你是例外。再者，既然是做题，也无需拘泥于特定的场所。任何一个能做题的地方——空教室，食堂，小餐厅，图书馆，大厅里的休息处，乃至于旧宿舍一楼的休息区，都可以作为我们展开活动的据点。”
+
+“旧宿舍一楼？”
+
+听到学姐的问题，我才发现自己说漏了嘴。思考了一下，相比被学姐再刨根问题下去，还不如我自己和盘托出。
+
+“对。我住在旧宿舍——那里之前封闭翻新了一段时间，今年才重新开放，所以现在只有我一个人住在三楼。”
+
+“听起来是个不错的地方呢。那就这么向学生会报备？”
+
+“两个人的话够吗？”
+
+“大不了我再拉一个人挂名。”
