--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -50,7 +50,7 @@
 
 “对啊，怎么了？”
 
-“既然是新生代表，要不要和我一起组个社团？”
+“雨宫同学既然是新生代表，要不要和我一起组个社团？”
 
 “不好意思，学姐，请问我有什么一定要和你组个社团活动的理由吗？”
 
@@ -64,7 +64,7 @@
 
 “做题家？”
 
-“你看啊，小说有小说家，音乐有音乐家，美术有美术家，那么做题自然也应该有做题家吧？”
+“雨宫同学你看啊，小说有小说家，音乐有音乐家，美术有美术家，那么做题自然也应该有做题家吧？”
 
 这套理论听起来倒没有什么可供指摘的地方，我干脆放弃思考，继续问问题好了。
 
@@ -95,3 +95,47 @@
 “两个人的话够吗？”
 
 “大不了我再拉一个人挂名。”
+
+既然学姐都这么说了，那我也没必要再去思考这些无聊的细节问题。
+
+——而此时我才想起了另一件事：我连学姐的名字都不知道。
+
+“说起来，学姐你叫什么名字？”
+
+“渡邊みゆき（Watanabe Miyuki），二年级。怎么，要加个Linie好友吗？”
+
+她递过手机，上面是一个二维码。我打开Linie扫过后，出现了一个动画风格的头像，旁边则是学姐的ID：
+
+snowsee。
+
+将みゆき对调顺序再转成英语——我没花什么功夫就猜出了这个ID的由来，随后便按下了申请成为好友的按钮。又过了片刻，手机上出现了同意好友申请的通知。
+
+兴致颇深地看着我完成一系列操作的渡边学姐，又丢来一个我意想不到的问题：
+
+“刚才我听到的那一曲似乎中途停掉了，可以继续弹完吗？”
+
+“渡边学姐说的应该是巴赫《赋格的艺术》的最后一曲吧？如果是那首的话，我弹出来的就是全部的内容了。”
+
+“哦？你的意思是说……”
+
+于是我开始向渡边学姐解释这一曲的创作经纬。Contrapunctus XIV的存世手稿末尾，有着以巴赫的儿子——卡尔·P·E·巴赫名义写下的一段内容，大意是<ruby><rb>「作曲者将以BACH动机开头的新主题插入此赋格后去世」</rb><rt>"Über dieser Fuge, wo der Nahme B A C H im Contrasubject angebracht worden, ist der Verfasser gestorben."</rt></ruby>。从那时起以来的数百年间，不少深入研究这一赋格的文章被撰写出来，也有为数不少的作曲家试图续写这部显然没有完成的作品。他们中的大多数都选择将出现于《赋格的艺术》前面曲目中的主题作为第四主题导入，这也是因为这一主题并未出现在本曲中的缘故。
+
+> 作曲者は、"BACH"の名に基く新たな主題をこのフーガに挿入したところで死に至った
+
+“那你有想过自己续写这首对位曲吗？”
+
+我摇摇头。虽然在学习钢琴的那几年，我也曾跟着老师学习过一些乐理知识，但如今也只不过是能流畅“读懂”钢琴谱的程度而已。要我基于巴洛克时期的对位法完成这首四重赋格，未免有些不太现实。
+
+“那就把这当成我们这个做题家协会的第一个问题吧——这个问题就留给雨宫同学你自己。至于完成期限——虽然不必急于一时，但我希望自己毕业之前能够听到你续写的曲子。”
+
+毕业——换而言之，渡边学姐给了我两年时间。如果是大学中主攻作曲方向的音乐系学生，两年的时间大概足够完成三到四个续写版本。而如果现在开始，从课余时间中挤出时间学习对位法并分析这首赋格的结构，我也有足够的信心在学姐毕业时交出一份她满意的答卷。
+
+“那就交给我好了。渡边学姐毕业的时候，请务必到这里听我续写完成的版本。”
+
+“我看好你的表现哦。那我就先走啦，之后随时在Linie上联系。”
+
+露出一个微笑的渡边学姐转身离去，略带卷曲的中长发在空中轻轻晃动。
+
+门被轻轻关上的咔嚓声传到我的耳边。又过了半分钟，更为轻微的咔嚓声从头顶略偏斜前方处传来。
+
+恢复了寂静的房间，就如同从未有人造访过一样。
