--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -1,10 +1,62 @@
 ## #05 Dormoĉambro
 
-&emsp;
-
 渡边学姐走后，我一直干坐到了五点钟，才提起书包走出房间，关好门后又顺着楼梯上楼。正当我眯着眼睛，确认门缝另一边的视野中没有人影的时候，才发现自己漏了一件事。
 
-——忘了把夹克从渡边学姐那要回来了。
+——忘了把制服夹克从渡边学姐那要回来了。
 
-在我的记忆中，学生手册中写有「每年4月的第二个星期一到10月的最后一个星期日，原则上可穿夏季制服到校上学」这一相当宽松的内容。初次读到这一条时，我甚至怀疑制定这一校规的人脑子是怎么长的——但联想到那个女人曾提过这个城市是某位德国设计师的得意之作，那么4月便可更换夏季校服，大概也是参照了德国的夏令时吧（这一知识是我在网上查到的）。
+在我的记忆中，学生手册中对制服的穿着是这样写的：
+
+1. 夏季制服的更换许可日期为4月的第二个星期二，即入学式的第二天；
+2. 夏季制服的更换规定日期为5月黄金周结束后的星期一；
+3. 冬季制服的更换许可日期为9月的最后一个星期日；
+4. 冬季制服的更换规定日期为10月的最后一个星期日。
+
+初次读到这些内容时，我甚至怀疑制定这一校规的人脑子是怎么长的——但联想到那个女人曾提过这个城市是某位德国设计师的得意之作，那么4月便可更换夏季制服，大概也是参照了德国的夏令时吧（这一知识是我在网上查到的）。
+
+明天干脆穿着夏季制服——虽然也只不过是不带校徽的短袖衬衫——上学吧。如果渡边学姐还记得制服的事情，自然会找到班上来；而如果她真的忘了这件事，我到时候再发Linie消息提醒她好了。
+
+再三确认底层无人光顾之后，我才轻轻将通向图书馆的门拉开一道恰好能让我通过的缝隙，连人带包钻过去后又轻轻将门关上，顺着螺旋楼梯回到一层，又穿过闸机进入大厅。
+
+虽然已经临近傍晚，但我丝毫没有去食堂或是小餐厅吃东西的心情——因为几年来我已经养成了随便应付一日三餐的习惯。我走进便利店拿了一罐无味气泡水、一罐玉米片、一盒巧克力夹心曲奇和一根<ruby><rb>牛肉棒</rb><rt>beef jerky</rt></ruby>，准备到柜台前用学生卡结账的时候，手机震动了几下——是两条邀请加入群组的通知和工藤发来的Linie消息。
+
+【您被邀请加入《UTAS Studenten》】
+
+【您被邀请加入《一年A班》】
+
+【Toshio_K：我把你拉群了哦。班级群和学校群。】
+
+我熟练地操控拇指，同意邀请之后，手机上显示了新的消息：
+
+【MSKさん加入了群组《UTAS Studenten》】
+
+【MSKさん加入了群组《一年A班》】
+
+我感觉到自己的嘴角弯了一下，但我却分不清这是欣喜，还是嘲弄。
+
+这时，Linie界面上又出现了一条新消息。
+
+【Toshio_K：我有点事想单独找你。】
+
+【MSK：时间是？】
+
+【Toshio_K：你什么时候有空？】
+
+【MSK：我想再躺会。1830？】
+
+【Toshio_K：没问题。到哪找你？】
+
+既然工藤单独找我，恐怕要谈的是些不便对同学讲的内容吧。我思考片刻后在手机上回复：
+
+【MSK：那就旧宿舍，你到门口的时候发消息给我吧。】
+
+【Toshio_K：好的，那就到时候再见。】
+
+【MSK：OK。】
+
+我又随手点进两个群组中看了一会，确认工藤没有新的消息发来，才将手机收进口袋，结账完毕后踏上了回宿舍的路。
+
+&emsp;
+
+
+
 
