--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -53,10 +53,8 @@
 
 【MSK：OK。】
 
-我又随手点进两个群组中看了一会，确认工藤没有新的消息发来，才将手机收进口袋，结账完毕后踏上了回宿舍的路。
+我又随手点进两个群组中看了一小会，确认工藤没有新的消息发来，才将手机收进口袋，结账完毕后踏上了回宿舍的路。
 
 &emsp;
 
-
-
-
+将全套4册的《悲惨世界》文库本放在书桌一旁的我，整个人栽在了床上，双眼直勾勾地盯着天花板。
