--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -57,4 +57,16 @@
 
 &emsp;
 
-将全套4册的《悲惨世界》文库本放在书桌一旁的我，整个人栽在了床上，双眼直勾勾地盯着天花板。
+将全套4册的《悲惨世界》文库本在书桌上放好后，我从抽屉中抽出一个宝蓝色封皮的笔记本。
+
+写在上面的并非日记，而是一些自己曾经在那个女人使用的教材上阅读过的知识点——它们如今已从中学教科书中消失，只能在补习班中学到。我快速翻过这些内容，找到自己折了角的那一页。
+
+空白的横线纸上，以娟秀的字体写着一行字：
+
+“给某天偶然见到的男孩子”。
+
+落款是“Dornröschen”。
+
+一年前，这个以睡美人自称的女大学生留给我的，就只有我手中的这个笔记本，而从我这里收走的，则是——
+
+我晃晃脑袋，将不着边际的思绪清理干净。事到如今，再后悔也没什么用处，更没必要将渡边学姐和那个女大学生放在一起比较。
