--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -70,3 +70,11 @@
 一年前，这个以睡美人自称的女大学生留给我的，就只有我手中的这个笔记本，而从我这里收走的，则是——
 
 我晃晃脑袋，将不着边际的思绪清理干净。事到如今，再后悔也没什么用处，更没必要将渡边学姐和那个女大学生放在一起比较。
+
+不，不对。还是应当在某个部位比较一下的。非要说的话，还是渡边学姐这边——
+
+“——我这是在想什么呢。”
+
+真拿自己没办法。虽然不知道这个学校里随处可见的男高中生们又是怎样，但很早就对这方面知识通过专业课书籍或是网络途径有所了解的我，却有着一个重大的缺陷——那就是我无法像某类文学中的主人公们一样，通过独自处理性欲获得精神上的愉悦，反而只能收获无尽的空虚感。
+
+更何况，在那样窒息的家庭环境之下，我也只能选择在那两个人不在家的时间段，尽可能不留痕迹地完成这一工作。在这一近乎与空气斗智斗勇的过程中，我大概已经练就了某些一般的男子高中生未必会掌握的技巧，但这并不是什么值得夸耀的东西。
