--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -78,3 +78,15 @@
 真拿自己没办法。虽然不知道这个学校里随处可见的男高中生们又是怎样，但很早就对这方面知识通过专业课书籍或是网络途径有所了解的我，却有着一个重大的缺陷——那就是我无法像某类文学中的主人公们一样，通过独自处理性欲获得精神上的愉悦，反而只能收获无尽的空虚感。
 
 更何况，在那样窒息的家庭环境之下，我也只能选择在那两个人不在家的时间段，尽可能不留痕迹地完成这一工作。在这一近乎与空气斗智斗勇的过程中，我大概已经练就了某些一般的男子高中生未必会掌握的技巧，但这并不是什么值得夸耀的东西。
+
+“——晚上洗澡的时候，在这个新环境试试好了。”
+
+这不过是无法从中获取愉悦的人的例行公事。也许在他人眼里是某种变态行为，但我并不觉得这有什么好羞耻的。
+
+我拉开铝罐拉环，咕嘟咕嘟地喝着气泡水，又掀开桶装玉米片的盖子，撕下里面的包装纸。
+
+工藤六点半就要过来，我可没工夫再磨磨蹭蹭。
+
+&emsp;
+
+
