--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -1,6 +1,6 @@
 ## #05 Dormoĉambro
 
-渡边学姐走后，我一直干坐到了五点钟，才提起书包走出房间，关好门后又顺着楼梯上楼。正当我眯着眼睛，确认门缝另一边的视野中没有人影的时候，才发现自己漏了一件事。
+渡边学姐走后，我一直干坐到了五点钟，才提起书包走出房间，关好门后又顺着楼梯上楼。正当我眯着眼睛观察门缝另一边状况的时候，才发现自己漏了一件事。
 
 ——忘了把制服夹克从渡边学姐那要回来了。
 
@@ -15,7 +15,13 @@
 
 明天干脆穿着夏季制服——虽然也只不过是不带校徽的短袖衬衫——上学吧。如果渡边学姐还记得制服的事情，自然会找到班上来；而如果她真的忘了这件事，我到时候再发Linie消息提醒她好了。
 
-再三确认底层无人光顾之后，我才轻轻将通向图书馆的门拉开一道恰好能让我通过的缝隙，连人带包钻过去后又轻轻将门关上，顺着螺旋楼梯回到一层，又穿过闸机进入大厅。
+门缝的另一侧——图书馆的底层多了几个学生，大概是结束了联谊活动后跑来这里自习的吧。实在不想引来不必要的注意的我，确认他们短时间内没有离开的意图后，只好放弃从图书馆回到大厅的想法，沿着来路返回房间，打开了另一扇门。
+
+我沿着门后的楼梯走上去，便进入了堪称迷宫的广阔空间——也就是位于这所学校地下一层的车库。
+
+根据宿管老师的说法，理论上可以从这里进入学校内除旧宿舍外的所有建筑物，而车库的数个出口则直接通向学校外侧——不过话又说回来，这所学校本来就不存在“校门”的概念，堪称来去自由的典范，连旧宿舍外都有一条通向后面柏油马路的小径。虽然原先位于此地的天道大学早已搬走，但大学的设计理念却仍在校园设计的理念上留存了下来。
+
+我看向周围的指示标记，又抬头看了看上方的指示牌，确认方向并走了一小段路，便找到了通向教学楼的电梯。又过了一分钟后，我的双脚已然站在了大厅的地面上。
 
 虽然已经临近傍晚，但我丝毫没有去食堂或是小餐厅吃东西的心情——因为几年来我已经养成了随便应付一日三餐的习惯。我走进便利店拿了一罐无味气泡水、一罐玉米片、一盒巧克力夹心曲奇和一根<ruby><rb>牛肉棒</rb><rt>beef jerky</rt></ruby>，准备到柜台前用学生卡结账的时候，手机震动了几下——是两条邀请加入群组的通知和工藤发来的Linie消息。
 
@@ -89,4 +95,35 @@
 
 &emsp;
 
+刚一走进旧宿舍楼，工藤就露出了羡慕的神色。
+
+“没想到雨宫你住在这么逍遥的地方啊，真是羡慕。”
+
+“哪有什么值得羡慕的，工藤。虽说这里不缺配套设施，但我又懒得自己做饭，还不是得去食堂那边挤。”
+
+我把工藤带到一楼的休息区，找了个半开放式的隔间坐下，随后向他问道：
+
+“所以，工藤你联系我是什么事？莫非是有追班上哪个女孩子的想法，跑来找我这个看上去脑子不错的人出主意？”
+
+“你这哪是‘看上去脑子不错’啊？有你这么把人心里的想法直接说出来的吗？”
+
+“我也只是凭直觉猜的。对了，工藤要喝点什么吗？那边有饮水机，还有贩售饮料的自动贩卖机，需要的话我帮你取。”
+
+“那就来瓶可乐吧。这是我的卡。”
+
+我接过工藤的学生卡，走到自动贩卖机旁刷卡消费之后，从下面的出货口取出一瓶冷藏的可乐。
+
+“雨宫你不喝饮料吗？算我请客。”
+
+“不必了，我喝水就好。”
+
+虽然我的确有喝饮料的习惯，但很不巧的是这台贩卖机里既没有MTD也没有无味气泡水。而且今天我喝的碳酸饮料实在有点多，如果到晚上还被胀气困扰的话可就麻烦大了。
+
+将可乐递给工藤后，我问出了第三个问题：
+
+“工藤打算追的是班上的哪位？这次我就不猜了。”
+
+“……是森山啦。”
+
+工藤的声音稍微带上了一丝迟疑，这完全不像清早他在班级里的作风。从窗外射入的霞光正一丝丝褪去，这让我看不清他的表情——这时我想到了两件事。其一是工藤说出这句话，说明他在中等部的三年里并没有多少机会和森山接触；其二——如此环境之下，我实在没有黑着灯和工藤说话的道理。
 
