--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -127,3 +127,46 @@
 
 工藤的声音稍微带上了一丝迟疑，这完全不像清早他在班级里的作风。从窗外射入的霞光正一丝丝褪去，这让我看不清他的表情——这时我想到了两件事。其一是工藤说出这句话，说明他在中等部的三年里并没有多少机会和森山接触；其二——如此环境之下，我实在没有黑着灯和工藤说话的道理。
 
+我走到墙边，拨动开关，点亮头上的吸顶灯后，才坐回工藤对面继续说道：
+
+“从你给我留下的印象看，工藤你在中等部的时候身边应该不缺女生吧？如果这样的话，就算对面是《公主大人》，难道还需要我来出主意吗？”
+
+“雨宫你是呆子吧，《公主大人》和一般的女生能一样吗？”
+
+“不都一样是女生吗，怎么就不一样了？”
+
+“你刚来这里所以不知道，排在人气榜女生组前三的《女王》《公主》和《天使》，到现在还保持着将来告白的男生全员击沉的纪录呢。就连讨论她们会和谁交往这件事，都已经成了蔓延整个学校的话题了。”
+
+短短几句话之间，工藤已经喝掉了小半瓶可乐。我一边为那些被三位人气王击沉的男生们默哀，一边向面前这个可能成为下一个牺牲者的男生问道：
+
+“那工藤你就这么有自信能虏获《公主大人》的芳心？”
+
+“我本来也没有，但我觉得现在出手的难度会低一些。”
+
+我不禁瞥了工藤一眼——看来他早有计划，只是需要一个参谋而已。我试着在脑海中复盘自己阅读过的恋爱类故事的大致脉络，思考片刻后向工藤询问：
+
+“说到追女孩子的第一步，常见的策略是制造能够单独相处的机会。如果我的推测无误，工藤你是打算和森山同学一起担任我们这个一年A班的学级委员吧？”
+
+“我说雨宫，你这脑子都好到可以给我老爹当助手了。”
+
+“工藤的父亲从事的是什么工作？”
+
+“私家侦探、推理小说作家和翻译家。按我老爹的说法，脑子好的人既可以想到更多的推理思路，也可以根据既有的推理故事构造新的故事结构。先不说这个，我的确是想和森山一起担任班级里的学级委员没错，但我总觉得毛遂自荐的话，有什么地方不太对头。”
+
+“太过直接的攻势，反而会引发对面的反感？”
+
+“大致是这样没错。”
+
+不可正攻，那么就该迂回了。我思索片刻，想到了一个办法。
+
+“既然如此，接下来工藤就按我说的办法行事。我今晚会在班级群里保持沉默，而工藤你需要做的，是在群里制造我有可能自荐担任学级委员的气氛。”
+
+“雨宫你来当学级委员？”
+
+“是‘制造气氛’——总之，这份气氛需要达到确保我在明天的HR上发言之前没有人自我推荐的地步。必要的话，你也可以在回宿舍之后和同学提起这个事。”
+
+“明白了。那之后要怎么做？”
+
+“之后的话就……”
+
+随后，我对工藤讲出了明天自己准备在HR上实行的计划。
