--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -16,13 +16,13 @@ HR一开始，菅田老师就对着整个教室说道。
 
 四四、四五、四六。
 
-“嗯，还没有哪位同学愿意担任学级委员的吗？我再等一分钟，如果还没有人自告奋勇的话，我就直接指定了啊。”
+“嗯，还没有哪位同学愿意担任学级委员的吗？我再等半分钟，如果还没有人自告奋勇的话，我就直接指定了啊。”
 
 五八、五九、六十。
 
-我睁开眼睛，再次看向时钟上的秒针。
+睁开眼睛的我，再次抬头看向时钟上的秒针。
 
-——比我原本预料的快了三秒半。如果是平常，一分钟的计数误差不会超过两秒。终究还是因为脑中有事而做不到心如止水。
+——比我原本预料的快了三秒半。如果是平常，一分钟的计数误差绝不会超过两秒。终究还是因为脑中有事而做不到心如止水。
 
 我挤出一个自嘲般的笑容，举起右手示意。
 
