--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -22,7 +22,7 @@ HR一开始，菅田老师就对着整个教室说道。
 
 睁开眼睛的我，再次抬头看向时钟上的秒针。
 
-——比我原本预料的快了三秒半。如果是平常，一分钟的计数误差绝不会超过两秒。终究还是因为脑中有事而做不到心如止水。
+——快了三秒。如果是平常，一分钟的计数误差绝不会超过两秒。终究还是因为脑中有事而做不到心如止水。
 
 我挤出一个自嘲般的笑容，举起右手示意。
 
