--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -112,7 +112,19 @@ HR一开始，菅田老师就对着整个教室说道。
 
 菅田老师进行了总结发言。我睁开双眼，宣示班会结束的铃声恰好于此刻响起。
 
-——**热闹是他们的，我什么都没有**。.
+——**热闹是他们的，我什么都没有**。
+
+——**现在这样，对我已经足够了**。
+
+然而。
+
+——**这样真的好吗**？
+
+一个声音在我的脑海中响起。
+
+那是一个耳熟能详却又陌生至极的声音——不，我知道那是谁的声音。
+
+那是<ruby><rb>**我**</rb><rt>わたし</rt></ruby>的声音。
 
 &emsp;
 
