--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -100,11 +100,11 @@ HR一开始，菅田老师就对着整个教室说道。
 
 一六六、一六七、一六八、一六九、一七零。
 
-各个委员的人选，逐一被决定。
+各个委员的人选被逐一决定。
 
 二四三、二四四、二四五、二四六、二四七。
 
-然而，这一切已与我再无关联。
+不过，这一切已与我再无关联。
 
 二九六、二九七、二九八、二九九、三百。
 
